Bugfix: Make sure that smart menu 3rd level does not get horizontal scroll bars, resolves #807.

--- a/scss/boost_union/post.scss
+++ b/scss/boost_union/post.scss
@@ -1984,6 +1984,7 @@ body.theme_boost-union-footerbuttonnone.jsenabled {
                         }
                     }
                     .items a.dropdown-item {
+                        white-space: normal;
                         align-items: baseline;
                     }
                 }
